# XLMate

.github/workflows/: contracts.yml
backend/: .env.example  AUTHENTICATION_SETUP.md  Cargo.toml  DEPLOYMENT.md  FLOW_DIAGRAM.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  docker-compose.yml
backend/modules/: Cargo.toml
backend/modules/api/: Cargo.toml
backend/modules/api/src/: auth.rs  config.rs  lib.rs  main.rs  openapi.rs  server.rs  ws.rs
backend/modules/api/src/test/: mod.rs  rate_limit.rs
backend/modules/chess/src/bitboard/: bitboard.rs  board.rs  mod.rs
backend/modules/db/: Cargo.toml
backend/modules/db/entity/: Cargo.toml  game.rs  mod.rs  user.rs
backend/modules/db/entity/src/: game.rs  lib.rs
backend/modules/db/migrations/: Cargo.toml
backend/modules/db/migrations/src/: lib.rs  m20250123_000001_create_users_table.rs  m20250428_121011_create_players_table.rs  m20250429_192832_add_common_indexes.rs
backend/modules/db/src/: db.rs
backend/modules/dto/: Cargo.toml
backend/modules/dto/src/: auth.rs  lib.rs  players.rs  responses.rs
backend/modules/error/: Cargo.toml
backend/modules/matchmaking/: Cargo.toml  elo.rs  mod.rs  models.rs  service.rs
backend/modules/security/: Cargo.toml
backend/modules/security/src/: jwt.rs  lib.rs
backend/modules/service/: Cargo.toml
backend/modules/service/src/: lib.rs  players.rs  user.rs
backend/modules/st_core/: Cargo.toml
backend/modules/tournament/: Cargo.toml
backend/modules/tournament/src/: arena.rs  lib.rs  pairing.rs
backend/src/: main.rs
backend/src/socket/: game.rs  handlers.rs  models.rs
contracts/emergency_circuit_breaker/: Cargo.toml
contracts/emergency_circuit_breaker/src/: lib.rs
contracts/emergency_circuit_breaker/test_snapshots/test/: test_claim_when_paused.1.json  test_deposit_when_not_paused.1.json  test_deposit_when_paused.1.json  test_emergency_rescue_when_paused.1.json  test_initialize.1.json  test_mint_when_paused.1.json  test_pause_non_admin.1.json  test_pause_unpause.1.json  test_transfer_admin_when_paused.1.json  test_view_functions_when_paused.1.json
contracts/game_registry/contracts/game-registry/: pr_desc.md
contracts/game_registry/contracts/game-registry/src/: lib.rs  test.rs
frontend/app/: layout.tsx  provider.tsx
frontend/components/: GameSidebar.tsx  Header.tsx  WalletConnectModal.tsx
frontend/components/utils/: Connector.tsx  Provider.tsx
frontend/context/: walletContext.tsx
