[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
argon2 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

dto = { path = "../dto"}
db = {path = "../db"}
db_entity = { path = "../db/entity"}
error ={ path = "../error"}

